alibabacloud/asm/productcatalogservice-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: productcatalogservice
spec:
  hosts:
    - productcatalogservice
  http:
    - route:
        - destination:
            host: productcatalogservice
            subset: v1
          weight: 20
        - destination:
            host: productcatalogservice
            subset: v2
          weight: 80
